# RayTracerChallenge

./: CMakeLists.txt  bounding_box.h  canvas.h  clock.h  color.h  intersect.h  main.cpp  matrix.h  normal.h  obj_parser.h  pattern.h  projectile.h  ray.h  render_functions.h  rendering.h  structs.h  transformations.h  tuples.h  util.h
